@@ -52,8 +52,8 @@ Licensed under the MIT License.
       --add-opens com.azure.cosmos/com.azure.cosmos.implementation.throughputControl=ALL-UNNAMED
       --add-opens com.azure.cosmos/com.azure.cosmos.implementation.throughputControl.controller.request=ALL-UNNAMED
       --add-opens com.azure.cosmos/com.azure.cosmos.implementation.clienttelemetry=ALL-UNNAMED
-      --add-opens io.netty.channel/io.netty.channel=ALL-UNNAMED
-      --add-opens io.netty.channel/io.netty.channel.epoll=ALL-UNNAMED
+      --add-opens io.netty.transport.epoll/io.netty.channel.epoll=ALL-UNNAMED
+      --add-modules=io.netty.transport.epoll
     </javaModulesSurefireArgLine>
     <codesnippet.skip>false</codesnippet.skip>
     <javadocDoclet></javadocDoclet>
